Changelog
=========

3.0rc3 - Unreleased
-------------------

* Add french translation
  [toutpt]

3.0rc2 - 2010-11-15
-------------------

* Dexterity behavior and view for file content.
  [elro]

* Split base configuration out from AT specific configuration.
  [elro]

* Updated to Flowplayer 3.2.5 (plugins updated to latest version)
  [naro]

* Added iPad/iPhone javascript plugin. Plugin is avalable to custom use, but
  not included in javascript configuration by default. 
  [naro]

* Fix metadata parsing of links caused by redesign with new parsing framework.
  [thet]

* CSS simplification.
  [thet]

* Don't set flowplayer's width per javascript for audio files. Let it be set by
  css. Besides a simplification this change also allows easy overriding.
  [thet]

* Don't hide flowplayer controls in when loading audio files
  [thet]

* Code cleanup in events.py
  [thet]

* Metadata extraction with hachoir library instead of own flv-only
  implementation. Code partially taken from p4a.video.
  [thet]

* Test fixes and cleanups
  [thet]

* made zope2 products from collective.flowplayer to be able to provide
  uninstall profile.
  [naro]

* implemented first part of the uninstall profile
  [naro]

3.0rc1 - 2010-06-24
-------------------

* Updated Flowplayer to 3.2.2
  [naro]

* Fix to address Flash 10.1 issue.
  [dunlapm]

3.0b7 - 2010-03-14
------------------

* Do not fail if Kupu is not available
  [naro]

* added z3c.autoinclude plugin
  [naro]

* Fixed handling of audio player if created from Kupu.
  [naro]

3.0b6 - 2010-03-09
------------------

* Updated Flowplayer to 3.1.5

* Partially fixed class="autoFlowPlayer minimal audio".
  Class minimal in combination with audio still causes problems.
  [naro]

3.0b5 - 2009-12-11
------------------

* Removed @@ prefix from collective.flowplayer.js in javascript registry.
  It probably confused Safari and Chrome. Thanks dahoste for pointing to
  this issue.
  [naro]
