@@ -7,5 +7,8 @@
     enabled="True" expression=""
     id="++resource++collective.flowplayer/flowplayer.playlist.min.js" inline="False"/>
  <javascript cacheable="True" compression="none" cookable="True"
-    enabled="True" expression=""  id="collective.flowplayer.js" inline="False"/>      
+    enabled="True" expression=""  id="collective.flowplayer.js" inline="False"/>
+ <javascript cacheable="True" compression="none" cookable="True"
+    enabled="True" expression=""  id="++resource++collective.flowplayer.js/init.js" inline="False"/>
+
 </object>
