@@ -3,4 +3,5 @@
  <javascript id="++resource++collective.flowplayer/flowplayer.min.js" remove="True" />
  <javascript id="++resource++collective.flowplayer/flowplayer.playlist.min.js" remove="True" />
  <javascript id="collective.flowplayer.js" remove="True" />
+ <javascript id="++resource++collective.flowplayer.js/init.js" remove="True" />
 </object>
