@@ -4,6 +4,11 @@ Changelog
 3.0rc3 - Unreleased
 -------------------
 
+* Only generate a minimal config global object. Move remaining javascript to a
+  separate file in a resource directory to simplify checking with jslint and
+  customisation.
+  [elro]
+
 * Add french translation
   [toutpt]
 
